<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center"
    android:background="@color/background">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_auth"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:textColor="@color/primary"/>

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Username"
        android:hint="@string/hint_username"
        android:textColorHint="@color/text_secondary"
        android:backgroundTint="@color/primary"
        android:inputType="textPersonName"
        android:textColor="@color/text_primary"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="Password"
        android:hint="@string/hint_password"
        android:textColorHint="@color/text_secondary"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/primary"
        android:inputType="textPassword"
        android:textColor="@color/text_primary"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_login"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/secondary" />

    <TextView
        android:id="@+id/tvSwitchAuth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/auth_switch_register"
        android:layout_marginTop="24dp"
        android:textColor="@color/primary_variant"
        android:textStyle="bold"
        android:padding="8dp" />

</LinearLayout>